# SATOPT

./: LICENSE  README.md  pyproject.toml
examples/: check_surface.py  example_0.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb  ffd_example_from_fdd_docu.ipynb  ffd_test.ipynb  new_implementation.ipynb  test_normal_flip.py
old_implementation/: body.py  drag.py  ffd.py  optimize_satellite.py
src/: aerodynamic_coefficients_panel_method.csv  analysis.py  body.py  check_surface.py  constrains.py  drag.py  ffd.py  objectives.py  optimize.py  optimize_satellite.py  optimized_satellite_pygem.py  run.py  test_normal_flip.py  utils.py
