[project]
name = "satopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miklas Schuette", email = "schuettem@irs.uni-stuttgart.de" },
    { name = "Nico Segreto", email = "segreto@theochem.uni-stuttgart.de" },
    { name = "Lia Kruse", email = "kruse@theochem.uni-stuttgart.de" },
]
license = "MIT"

requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pygem",
    "ruff>=0.13.0",
    "scikit-optimize>=0.10.2",
    "trimesh>=4.8.1",
]

[tool.uv.sources]
pygem = { git = "https://github.com/mathLab/PyGeM.git" }
